--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,46 +7,49 @@
     tools:context=".comparar.view.MainActivity">
 
     <TextView
-        android:id="@+id/resultTxtV"
+        android:id="@+id/resultTxtView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.443"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.272" />
+        app:layout_constraintVertical_bias="0.765" />
 
     <EditText
         android:id="@+id/inputFirstText"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
+        android:layout_marginBottom="19dp"
+        android:autofillHints=""
         android:ems="10"
         android:hint="Escribir"
         android:inputType="text"
         android:textColorHint="#8D6E63"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/compararButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.373"
-        android:autofillHints="" />
+        app:layout_constraintVertical_bias="0.937" />
 
     <EditText
         android:id="@+id/inputSecondText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="33dp"
         android:autofillHints=""
         android:ems="10"
+        android:hint="Escribir"
         android:inputType="text"
         android:minHeight="48dp"
-        android:text="Name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.593"
+        app:layout_constraintTop_toBottomOf="@+id/compararButton"
+        app:layout_constraintVertical_bias="0.082"
         tools:ignore="TextSizeCheck" />
 
     <ImageButton
@@ -54,9 +57,10 @@
         android:layout_width="55dp"
         android:layout_height="50dp"
         android:contentDescription="Comparar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/icons8_search_96___"
-        tools:layout_editor_absoluteX="161dp"
-        tools:layout_editor_absoluteY="322dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="322dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
